Fix broken infinite scroll when deleting items

--- a/client/src/app/shared/shared-video-miniature/videos-selection.component.scss
+++ b/client/src/app/shared/shared-video-miniature/videos-selection.component.scss
@@ -2,14 +2,10 @@
 @use '_mixins' as *;
 
 .action-selection-mode {
-  display: flex;
-  justify-content: flex-end;
-  flex-grow: 1;
-}
-
-.action-selection-mode-child {
   position: fixed;
-  display: flex;
+  bottom: 1rem;
+
+  @include right(#{pvar(--x-margin-content)});
 
   .action-button {
     display: block;
@@ -45,10 +41,10 @@
   }
 
   .checkbox-container {
-    display: none;
+    display: none !important;
   }
 
   .action-selection-mode {
-    display: none; // disable for small screens
+    display: none !important; // disable for small screens
   }
 }
